# chugchug

./: .gitignore  LICENSE  README.md  demo.py  demo_gif.py  demo_notebook.ipynb  pyproject.toml
chugchug/: __init__.py  __main__.py  _bar.py  _callbacks.py  _cli.py  _config.py  _diagnostics.py  _eta.py  _format.py  _gradient.py  _monitor.py  _mp.py  _notebook.py  _persistence.py  _pipeline.py  _renderer.py  _terminal.py  _tracker.py  _training.py  _types.py  _unwrap.py  auto.py  compat.py  viz.py
tests/: test_compat.py  test_crash_context.py  test_diagnostics.py  test_eta.py  test_mp.py  test_pipeline.py  test_renderer.py  test_stall.py  test_tracker.py  test_types.py  test_unwrap.py
