[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chugchug"
version = "0.1.2"
description = "Next-generation progress bars — event-driven, multiprocessing-safe, pipeline-aware"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vadim Borisov" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
monitor = ["psutil"]
gpu = ["pynvml"]
all = ["psutil", "pynvml"]
dev = ["pytest>=7.0"]

[project.scripts]
chugchug = "chugchug._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chugchug*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
